# google-TimesFM-implementation

./: .git.pointer.bak  .gitignore  HANDBOOK.md  README.md  RELEASE_NOTES.md  pyproject.toml
.gitdir/: FETCH_HEAD
.github/workflows/: tests.yml
artifacts/airline_passenger_timesfm/: backtest_detail.csv  backtest_metrics.csv  crew_schedule_plan.csv  dynamic_pricing_signals.csv  fleet_allocation_plan.csv  forecast_next_14_days_route.csv  route_priority_for_planning.csv
artifacts/atm_cash_demand_timesfm/: backtest_metrics.csv  forecast_next_30_days.csv  holiday_demand_forecast.csv  logistics_summary.csv  next_week_cash_requirement.csv  refill_plan_forecast_policy.csv  tomorrow_cash_requirement.csv
artifacts/cloud_capacity_timesfm/: autoscaling_kpis.csv  backtest_metrics.csv  cluster_capacity_plan_24h.csv  server_forecast_next_24h.csv
artifacts/electricity_load_timesfm/: backtest_metrics.csv  weekly_operational_schedule.csv
artifacts/financial_transaction_volume_timesfm/: backtest_detail.csv  backtest_metrics.csv  capacity_resource_plan.csv  forecast_next_168_hours.csv  kpi_summary.csv
artifacts/hospital_patient_volume_timesfm/: backtest_metrics.csv  forecast_next_90_days.csv  holiday_backtest_eval.csv  holiday_staffing_plan.csv  staffing_plan_next_14_days.csv
artifacts/manufacturing_sensor_timesfm/: backtest_metrics.csv  future_temperature_alerts.csv  future_temperature_forecast.csv  maintenance_schedule.csv
artifacts/retail_demand_timesfm/: inventory_policy.parquet  submission_timesfm.csv  validation_metrics.csv  (+2 more)
docs/: 00-overview.md  01-prerequisites.md  02-installation.md  03-first-forecast.md  04-core-concepts.md  05-data-format-and-preprocessing.md  06-using-timesfm.md  07-evaluation.md  08-troubleshooting.md  09-faq.md  10-next-steps.md
examples/: 01_minimal_synthetic_forecast.py  02_beginner_airline_passengers_forecast.py  03_covariates_xreg_example.py  04_evaluation_backtest_example.py  README.md
exercises/: 01-first-csv-forecast.md  02-rolling-backtest.md  03-leakage-traps.md  README.md
gitdir_store/: COMMIT_EDITMSG  FETCH_HEAD  config  index
gitdir_store/logs/: HEAD
notebooks/: README.md  airline_passenger_forecasting_timesfm.executed.ipynb  airline_passenger_forecasting_timesfm.ipynb  atm_cash_demand_timesfm.executed.ipynb  atm_cash_demand_timesfm.ipynb  cloud_capacity_timesfm.executed.ipynb  cloud_capacity_timesfm.ipynb  electricity_load_timesfm_pjm.executed.ipynb  electricity_load_timesfm_pjm.ipynb  financial_transaction_volume_timesfm.executed.ipynb  financial_transaction_volume_timesfm.ipynb  hospital_patient_volume_timesfm.executed.ipynb  hospital_patient_volume_timesfm.ipynb  manufacturing_sensor_timesfm.executed.ipynb  manufacturing_sensor_timesfm.ipynb  retail_demand_timesfm_favorita.executed.ipynb  retail_demand_timesfm_favorita.ipynb  warehouse_order_volume_timesfm.executed.ipynb  warehouse_order_volume_timesfm.ipynb  website_traffic_timesfm.executed.ipynb  website_traffic_timesfm.ipynb
scripts/: build_docs_evidence.py  check_markdown_links.py  final_real_run.py  retail_demand_timesfm_favorita.py  validate_final_real_run.py
tests/: test_docs_links.py  test_environment.py  test_examples_smoke.py
(+36 files in other folders)
