[project]
name = "google-timesfm-implementation"
version = "2.0.0"
description = "Zero-to-mastery learning path for Google TimesFM, plus 10 real-world applied forecasting case studies"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "kaggle>=1.7.4.5",
  "loguru>=0.7.3",
  "numpy>=2.2.0",
  "ortools>=9.14.6206",
  "pandas>=2.3.0",
  "plotly>=6.1.0",
  "polars>=1.31.0",
  "pyarrow>=20.0.0",
  "pydantic>=2.11.7",
  "python-dateutil>=2.9.0.post0",
  "scikit-learn>=1.7.0",
  "timesfm[torch,xreg]>=2.0.2",
  "tqdm>=4.67.1",
  "jupyter>=1.1.1",
  "nbconvert>=7.16.6",
  "ipykernel>=6.29.5",
  "matplotlib>=3.10.3",
]

[project.scripts]
retail-demand-timesfm = "scripts.retail_demand_timesfm_favorita:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.uv]
package = false

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
markers = [
  "model: exercises the real TimesFM model (downloads/loads checkpoint; needs network on first run)",
]
